# linecheck

./: .gitignore  .linecheckrc  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  action.yml  cspell.json  linecheck.yml  package.json  pnpm-lock.yaml
.changeset/: add-go-wasi-bindings.md  add-marketplace-composite-action.md  clippy-dbg-macro-lint.md  enable-must-use-candidate-lint.md  initial-release.md  npm-cli-wasi.md  public-release-fixes.md  skip-binary-files.md  skip-whitespace-flag.md  wasm-bindings.md  wasm-npm-bindings.md
.claude/: settings.json
.githooks/: pre-push
.github/workflows/: ci.yml  publish.yml  release.yml
benchmark/: .gitignore  README.md  run.sh
benchmark/fixtures/: generate.sh
crates/wasm/: Cargo.toml
crates/wasm-wasi/: Cargo.toml
crates/wasm-wasi/src/: check.rs  lib.rs  memory.rs  result.rs
crates/wasm/src/: lib.rs  result.rs
examples/ci/: linecheck.sh
examples/github/: workflow.yml
examples/go/: go.mod  main.go
npm/linecheck/: README.md  package.json
schema/: linecheck.schema.json
scripts/: publish-npm.sh  publish.sh  sync-version.mjs
src/: args.rs  checker.rs  checker_tests.rs  config.rs  config_tests.rs  config_tests_2.rs  display.rs  display_tests.rs  escape.rs  files.rs  files_tests.rs  lib.rs  lines.rs  lines_skip_whitespace.rs  lines_tests.rs  main.rs  preset.rs  preset_tests.rs  result.rs  rule.rs
src/checker/: build.rs  mod.rs  options.rs  resolve.rs
src/config/: mod.rs  resolver.rs  validate.rs
src/display/: digits_tests.rs  json.rs  json_helpers.rs  json_tests_1a.rs  json_tests_1b.rs  json_tests_2.rs  mod.rs  status.rs  status_tests.rs  table.rs  test_helpers.rs  violations.rs  violations_message_test.rs  violations_tests_a.rs  violations_tests_b.rs
src/files/: filters.rs  mod.rs
tests/: cli.rs  cli_coverage.rs  cli_coverage_2.rs  cli_skip_whitespace.rs  integration.rs
tests/integration/: config.rs  helpers.rs  main.rs  options.rs  resolver.rs  rules.rs  status.rs
