[package]
name = "linecheck"
version = "0.3.0"
edition = "2024"
description = "A fast, configurable tool that warns or errors when files exceed a set line count"
license = "MIT"
repository = "https://github.com/tupe12334/linecheck"
homepage = "https://github.com/tupe12334/linecheck"
keywords = ["lint", "lines", "cli", "check", "ai"]
categories = ["command-line-utilities", "development-tools"]

[lib]
name = "linecheck"
path = "src/lib.rs"

[[bin]]
name = "linecheck"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
glob = "0.3"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
walkdir = "2"
anyhow = "1"

[dev-dependencies]
tempfile = "3"
