[workspace]
members = ["crates/wasm", "crates/wasm-wasi"]
# `cargo build`/`test`/`llvm-cov` without --workspace target only the CLI crate;
# crates/wasm is built and linted explicitly in CI (see .github/workflows/ci.yml).
default-members = ["."]

[package]
name = "linecheck"
version = "1.1.1"
edition = "2024"
rust-version = "1.85"
description = "A fast, configurable tool that warns or errors when files exceed a set line count"
license = "MIT"
repository = "https://github.com/tupe12334/linecheck"
homepage = "https://github.com/tupe12334/linecheck"
readme = "README.md"
documentation = "https://docs.rs/linecheck"
keywords = ["lint", "lines", "cli", "check", "ai"]
categories = ["command-line-utilities", "development-tools"]
exclude = [
    ".changeset/**",
    ".claude/**",
    ".github/**",
    ".githooks/**",
    "package.json",
    "pnpm-lock.yaml",
    "scripts/**",
    "node_modules/**",
    "crates/**",
    "npm/**",
]

[lib]
name = "linecheck"
path = "src/lib.rs"

[[bin]]
name = "linecheck"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
glob = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
walkdir = "2"
anyhow = "1"
content_inspector = "0.2.4"

[dev-dependencies]
tempfile = "3"

[lints.clippy]
all = { level = "deny", priority = -1 }
must_use_candidate = "warn"
dbg_macro = "deny"
